<resources>
    <string name="app_name" translatable="false">ElitMovies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="tmdb_api_key" translatable="false">1b5adf76a72a13bad99b8fc0c68cb085</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="user">User</string>
    <string name="airing_today">Airing today</string>
    <string name="on_the_air">On the air</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="summary">Summary</string>
    <string name="backdrop">Backdrop</string>
    <string name="show_replies">Show replies</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="reply">Reply</string>
    <string name="comments">Comments</string>
    <string name="username">Username</string>
    <string name="genre">Genre</string>
    <string name="search">Search</string>
    <string name="search_for_a_movie">Search for a movie</string>
    <string name="search_for_a_tv_show">Search for a TV Show</string>
</resources>
